--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -497,7 +497,10 @@ a.pw-popwindow-close:hover {
     align-items: center;
     background-color: #dfdfdf;
     box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.3);
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+}
+.pw-bio p {
+    font-size: 0.9em;
 }
 .pw-myphoto .pw-frames ::before,
 .pw-myphoto .pw-frames ::after,
